<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="alert_network_problem">Network problem occurred</string>
    <string name="alert_invalid_layer">Invalid layer!</string>
    <string name="alert_invalid_user">Invalid user!</string>
    <string name="alert_invalid_map_item">Invalid map item!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_remove_group">Remove Group</string>
    <string name="title_activity_create_map_item">Create Map Item</string>
    <string name="button_remove">Remove</string>

    <!-- Layer -->
    <string name="layer_note">Note</string>
    <string name="layer_image">Image</string>
    <string name="layer_video">Video</string>

    <!-- LoginMethodActivity -->
    <string name="app_name">Operations Coordinator</string>
    <string name="label_login_method">Select login method</string>
    <string name="button_accept">Accept</string>
    <string name="radio_login_password">Login/password</string>
    <string name="radio_nfc">NFC</string>
    <string name="radio_fingerprint">Fingerprint</string>

    <!-- NotImplementedYetActivity -->
    <string name="title_activity_not_implemented_yet">We are sorry…</string>
    <string name="label_we_are_sorry">We are sorry but this functionality has not been implemented yet. This is still work-in-progress program so please give us some time to add missing parts.</string>

    <!-- LoginPasswordActivity -->
    <string name="title_activity_login_password">Login</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="button_login">Login</string>

    <!-- MainMapActivity -->
    <string name="title_activity_main_map">Map</string>
    <string name="alert_could_not_login">Could not login</string>
    <string name="alert_logged_out">Logged out</string>
    <string name="alert_invalid_session_id">Invalid session ID</string>
    <string name="alert_invalid_session_id_logout">Invalid sessionID. Maybe you have logged in on another device? Closing map.</string>

    <!-- MainMapActivity Actions -->
    <string name="action_chat">Chat</string>
    <string name="action_layers">Layers</string>
    <string name="action_create_group">Create group</string>
    <string name="action_remove_group">Remove group</string>
    <string name="action_create_item">Create map item</string>
    <string name="action_logout">Logout</string>

    <!-- CreateGroupActivity -->
    <string name="label_available_groups">Available groups:</string>
    <string name="hint_group_name">Group name</string>
    <string name="hint_description">Description</string>
    <string name="alert_could_not_create_group">Could not create group</string>
    <string name="alert_group_created">Group successfully created</string>

    <!-- LayersMenuFragment -->
    <string name="menu_item_items">User Items</string>
    <string name="menu_item_people">People</string>
    <string name="menu_item_groups">Groups</string>
    <string name="menu_item_layers">Map Items</string>

    <!-- RemoveGroupActivity -->
    <string name="alert_group_removed">Group removed</string>
    <string name="label_select_group_to_remove">Select group to remove:</string>
    <string name="alert_could_not_remove_group">Could not remove group</string>

    <!-- ChatFragment -->
    <string name="button_send_message">Send</string>
    <string name="hint_message">Message</string>

    <!-- CreateMapItemActivity -->
    <string name="label_position">Position:</string>
    <string name="label_type">Type:</string>
    <string name="button_submit">Submit</string>
    <string name="alert_map_item_created">Item successfully added</string>

    <string-array name="item_type_array">
        <item>Note</item>
        <item>Image</item>
        <item>Video</item>
    </string-array>

    <!-- NoteCreateDataFragment -->
    <string name="hint_type_here">Type here</string>
    <string name="label_note">Note:</string>
    
    <!-- DisplayContentActivity -->
    <string name="title_activity_display_content">Content</string>
    
    <!-- ShowImageFragment -->
    <string name="imageHint">Image</string>
    
    <!-- ShowUserFragment -->
    <string name="labelName">"Name: "</string>
    <string name="labelSurname">"Surname: "</string>
    <string name="labelNick">"Nick: "</string>
    <string name="labelPhone">"Phone: "</string>
    <string name="labelEmail">"Email: "</string>
    <string name="buttonCall">Call</string>
    <string name="buttonComposeEmail">Compose email</string>
    <string name="descriptionAvatar">Avatar</string>
    <string name="could_not_load_user_avatar">Could not load user avatar</string>

</resources>