<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateGroupActivity" >

    <EditText
        android:id="@+id/inputGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hint_group_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputGroupName"
        android:ems="10"
        android:hint="@string/hint_description" />

    <TextView
        android:id="@+id/labelAvailableGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCreateGroup"
        android:layout_below="@+id/buttonCreateGroup"
        android:layout_marginTop="30dp"
        android:text="@string/label_available_groups"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputGroupDescription"
        android:onClick="createGroup"
        android:text="@string/button_create" />

    <ListView
        android:id="@+id/listViewAvailableGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/labelAvailableGroups" >
    </ListView>

</RelativeLayout>