<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".ShowUserFragment">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/userAvatar"
            android:layout_marginTop="10dp"
            android:text="@string/labelName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/labelSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelName"
            android:layout_marginTop="10dp"
            android:text="@string/labelSurname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/labelNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelSurname"
            android:layout_marginTop="10dp"
            android:text="@string/labelNick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/labelPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelNick"
            android:layout_marginTop="10dp"
            android:text="@string/labelPhone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelName"
            android:layout_toRightOf="@+id/labelName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelPhone"
            android:layout_marginTop="10dp"
            android:text="@string/labelEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelEmail"
            android:layout_marginTop="14dp"
            android:text="@string/buttonCall" />

        <Button
            android:id="@+id/buttonCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonCall"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/buttonCall"
            android:text="@string/buttonComposeEmail" />

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/descriptionAvatar"
            android:maxHeight="150dp"
            android:maxWidth="150dp" />

        <TextView
            android:id="@+id/userSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelSurname"
            android:layout_toRightOf="@+id/labelSurname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelNick"
            android:layout_toRightOf="@+id/labelNick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelPhone"
            android:layout_toRightOf="@+id/labelPhone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelEmail"
            android:layout_toRightOf="@+id/labelEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>