<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateMapItemActivity" >

    <TextView
        android:id="@+id/labelPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_position" />

    <TextView
        android:id="@+id/textViewPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelPosition"
        android:layout_alignBottom="@+id/labelPosition"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/labelPosition" />

    <TextView
        android:id="@+id/labelType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/labelPosition"
        android:text="@string/label_type" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/labelType"
        android:layout_toRightOf="@+id/labelType" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="createItem"
        android:text="@string/button_submit" />

    <RelativeLayout
        android:id="@+id/additionalData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerType" >

    </RelativeLayout>

</RelativeLayout>